# HPF-openmp

./: CMakeLists.txt  README.md  final_results.txt  generate_images.py  graph.ipynb  high_pass_filter  high_pass_filter.cpp  quick_run_openmp.sh  run_openmp.sh  run_tests_openmp.sh
build_openmp/: high_pass_filter
